--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section>
         <div class="section-0">
         <h2 class="testo-testimonianze">Epicode garantisce</h2>
-        <p class="testo-testimonianze">"3 mesi intensivi di corso che cambieranno la tua vita"</p>
+        <p class="testo-testimonianze">"3 mesi intensivi di corso che cambieranno <br> la tua vita"</p>
         <p class="testo-testimonianze"> Mario Rossi <br />
             CEO, Epicode</p>
         </div>
@@ -102,6 +102,7 @@
         <p class="scritta-footer">
         &copy; 2021. Immagini di <a href="https://pixabay.com/it/images/search/">Pixabay.</a>
         </p>
+    
         </div>
     </footer>
 </body>
